--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,30 @@
 <h1>AjaxApp</h1>
-<%= form_with url:  "/posts", method: :post,id: "form" do |form| %>
-  <%= form.text_field :content %>
+<%= form_with url: "/posts", method: :post,id: "form" do |form| %>
+  <%= form.text_field :content  , id: "content"%>
   <%= form.submit '投稿する' , id: "submit" %>
 <% end %>
 
+<div id="list">
+</div>
+
 <% @posts.each do |post| %>
-<div class="post" data-id=<%= post.id %> data-check=<%= post.checked %>>
+  <div class="post" data-id = <%= post.id %> data-check=<%= post.checked %>>
     <div class="post-date">
       投稿日時：<%= post.created_at %>
     </div>
     <div class="post-content">
       <%= post.content %>
+      const HTML = `
+       <div class="post" data-id=${item.id}>
+         <div class="post-date">
+           投稿日時：${item.created_at}
+         </div>
+         <div class="post-content">
+         ${item.content}
+         </div>
+       </div>`;
+       list.insertAdjacentHTML("afterend", HTML);
+       formText.value = "";
     </div>
   </div>
 <% end %>
